Jython NEWS

The features new in a given release are generally listed under the section for the "b1" release
of that version.

For more details of issue [ n ], please see https://hg.python.org/jython, or for tags [ GH-n ] see
https://github.com/jythontools/jython

Jython 2.7.2b3
  Bugs fixed
    - [ 2828 ] Update netty JARs to 4.1.45
    - [ 2044 ] CVE-2013-2027 Current umask sets privileges of class files and cache
    - [ 2834 ] Import of Java classes is not thread safe
    - [ 2820 ] Import fails with UnicodeDecodeError if sys.path contains invalid UTF-8 bytes
    - [ 2826 ] Unicode hex string decode failure
    - [ 2836 ] Java Swing library works only in interactive jython session

Jython 2.7.2b2
  Bugs fixed
    - [ 2814 ] maven/build.xml does not PGP-sign the publication

Jython 2.7.2b1
  Bugs fixed
    - [ 2806 ] Installer contains dependencies unshaded (Java 8)
    - [ 2666 ] Oracle JDK 7 out of support so no longer available on Travis
    - [ 2294 ] Importation of modules from directories with non-ASCII characters fails
    - [ 2055 ] isinstance() and issubclass() fail with abc.ABCMeta
    - [ 2569 ] jython launcher fails on Windows if JAVA_HOME is set
    - [ 2505 ] PySystemState is lost
    - [ 2796 ] Request for oversize arrays not handled in BaseBytes and PyByteArray
    - [ 2730 ] datetime.strptime('%b') behaviour inconsistent with CPython on Windows JDK 9+
    - [ 2613 ] MANIFEST.MF contains unfilled placeholders
    - [ 2330 ] full-build fails to copy CPython License
    - [ 2651 ] Travis builds failing with *** buffer overflow detected ***
    - [ 2703 ] JycompileAntTask cannot find ...ant.taskdefs.MatchingTask
    - [ 2708 ] test_urllib2net fails (on Travis CI)
    - [ 2764 ] Readme is not displayed when using the GUI installer
    - [ 2345 ] Installing pip fails if JYTHON_HOME points to old installation
    - [ 2774 ] test_ssl failures from weak certificate
    - [ 2768 ] Allow bytearray + and += to accept buffer protocol objects